# project-template

./: Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/.github/workflows/: linters-and-tests.yml
