[tool.poetry]
name = "python-project-template"
version = "0.1"
description = "python project template"
authors = ["ashibaev <ashibaev98@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8.0"
cookiecutter = "*"

[tool.poetry.dev-dependencies]
black = ">19.3b0"
flake8-awesome = "<1.3"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.10.1"

[tool.black]
target-version = ['py39']
line-length = 120

[build-system]
requires = ["poetry>=1.0"]
