[tool.poetry]
name = "{{ cookiecutter.project_slug.replace('_', '-') }})"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
black = ">19.3b0"
flake8-awesome = "<1.3"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.10.1"

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry>=1.0"]
